fix: tree second level alignment

--- a/src/discrete-layer/components/catalog-tree/catalog-tree.css
+++ b/src/discrete-layer/components/catalog-tree/catalog-tree.css
@@ -15,3 +15,7 @@ body[dir=rtl] .refreshIconButton {
   left: unset;
   right: 270px;
 }
+
+body[dir=rtl] .catalogContainer .ReactVirtualized__Grid__innerScrollContainer{
+  margin-right: -12px;
+}
